@@ -3,7 +3,7 @@ require 'rubygems/commands/query_command'
 
 ##
 # An alternate to Gem::Commands::QueryCommand that searches for gems starting
-# with the the supplied argument.
+# with the supplied argument.
 
 class Gem::Commands::ListCommand < Gem::Commands::QueryCommand
 
